Bug 501412 - Unexpected behaviour after cancel scanning in Skanpage
Summary: Unexpected behaviour after cancel scanning in Skanpage
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-12 15:07 UTC by Olga
Modified: 2025-06-04 17:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olga 2025-03-12 15:07:44 UTC
STEPS TO REPRODUCE
1.  Connect your scanner(s)  to your computer with USB cable/Wi-Fi/Ethernet 
2.  Open Skanpage -> click "Scan" button -> during scan process click "Cancel" ->  and again click "Scan" button

OBSERVED RESULT
1. Scanning was cancelled, but a blank page was appeared (This behaviour is typical for Canon i-SENSYS MF-4410)
2. After cancelling scanning, it is not possible to scan again. An error occurs: "Invalid parameter", although the parameters were not changed. (This behaviour is typical for Pantum and Epson scanners)

EXPECTED RESULT
There are no blank sheets after cancelling scanning process, it is possible to restart  scanning

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  ALT Workstation K 11.0 Beta
KDE Frameworks Version:  6.10.0
Qt Version:  6.7.2
Comment 1 Alexander Stippich 2025-03-15 15:43:38 UTC
Does this also happen with other scan software on linux, i.e. GNOME's Document Scanner?
Comment 2 Olga 2025-03-17 16:20:07 UTC
(In reply to Alexander Stippich from comment #1)
> Does this also happen with other scan software on linux, i.e. GNOME's
> Document Scanner?

I've tried such softwares as Simple-scan (https://apps.gnome.org/en/SimpleScan/) and XSane (https://wiki.ubuntuusers.de/XSane/) and haven't faced with this problem
Comment 3 Bug Janitor Service 2025-06-01 11:03:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/ksanecore/-/merge_requests/34
Comment 4 JPT 2025-06-01 13:33:55 UTC
Great find!

I could try if this helps with my samsung printer.
(now I got three different drivers/backends which all s**ck)

if I build from AUR skanpage-git  v24.01.90.r110.gd6faca0-1                                           
Will this include the fix, or do I have to wait for an AUR update?
Comment 5 Alexander Stippich 2025-06-04 17:25:40 UTC
Git commit a634ea0406f091cff46f9320c9e977aaee814907 by Alexander Stippich.
Committed on 04/06/2025 at 17:23.
Pushed by astippich into branch 'master'.

call sane_cancel when a user cancels the scan

M  +1    -0    src/scanthread.cpp

https://invent.kde.org/libraries/ksanecore/-/commit/a634ea0406f091cff46f9320c9e977aaee814907
Comment 6 Alexander Stippich 2025-06-04 17:34:47 UTC
This has just been merged to the master branch, so it likely was not included before in any packaged git version.
You would need a git snapshot from today of the KSaneCore library to be able to test the fix.