call sane_cancel when a user cancels the scan

BUG: 501412